--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 [Bb]uilds/WindowsBuild
 [Bb]uilds/LinuxBuild.zip
 [Bb]uilds/WindowsBuild.zip
+[Bb]uilds/server-online-shooter-key
 [Ll]ibrary/
 [Ll]ocal[Cc]ache/
 [Oo]bj/
